Fix width overflow issue

--- a/store/static/css/xda.css
+++ b/store/static/css/xda.css
@@ -31,6 +31,10 @@ body {
 
 }
 
+body, html {
+    overflow-x: hidden;
+}
+
 /* Designed by Brøderbund Software */
 /* FontFace Generated by FontPro */
 
